# philly-fair-measure

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  annual_report.json  fly.toml  netlify.toml  pyproject.toml  requirements.serve.txt
.claude/: launch.json
.github/workflows/: ci.yml  snapshot.yml
design/handoff/: HANDOFF.md  main.css  print.css  verdict.ts
design/handoff/vue/: README.md
design/handoff/vue/src/: App.vue
design/handoff/vue/src/components/map/: PropertySheet.vue
design/handoff/vue/src/components/search/: AddressSearch.vue
design/handoff/vue/src/components/ui/: InfoTip.vue  SectionCard.vue  SkeletonBlock.vue
design/handoff/vue/src/components/viz/: DriverBars.vue  HistorySpark.vue  IntervalStrip.vue  PeerHistogram.vue
design/handoff/vue/src/map/: fairMeasureMapStyle.ts
design/handoff/vue/src/views/: HomeView.vue  MapView.vue  MethodologyView.vue  PropertyView.vue
docs/: ccao-lessons.md  design-brief.md  equity-diagnostics.md  feature-plan-v2.md  features.md  frontend.md  historical-redistribution.md  model.md  operations.md  report-assessment-equity.md  research-notes.md  source_inventory.md  vertical-equity-report-card.md
docs/snapshots/: 2026-07-11.md  2026-07-13.md  2026-07-20.md  README.md
docs/stress-tests/: 2026-07-13-north-philadelphia.md
notebooks/: ty2027_report_reproduction.ipynb
scripts/: bundle_deploy_data.py  com.philly-assessments.snapshot.plist  com.philly-fair-measure.snapshot.plist  smoke_api.py
src/philly_assessments/: api.py  catalog.py  cli.py  config.py  equity_context.py  report.py  vocab.py  web_stats.py
src/philly_assessments/diagnostics/: acs_sensitivity.py  aerial_change.py  channel.py  facade.py  fairness_robustness.py  historical_redistribution.py  ratio_study.py  retail_market.py  robustness.py  stability.py
src/philly_assessments/features/: __init__.py  assessment_features.py  condo_features.py  market_areas.py  price_index.py  proximity.py  sale_features.py  spatial.py
src/philly_assessments/ingest/: derived.py  manifests.py  snapshots.py
src/philly_assessments/models/: __init__.py  baseline.py  bayesian.py  comps.py  condo.py  conformal.py  explain.py  metrics.py  scoring.py
src/philly_assessments/sources/: arcgis.py  carto.py  mapillary.py
src/philly_assessments/staging/: __init__.py  geometry.py  parcels.py  runner.py  tables.py  temporal.py
src/philly_assessments/validation/: __init__.py  opa.py  sales.py
src/philly_fair_measure/: __init__.py  api.py  catalog.py  cli.py  config.py  docs_sync.py  equity_context.py  report.py  scalars.py  vocab.py  web_stats.py
src/philly_fair_measure/diagnostics/: acs_sensitivity.py  aerial_change.py  annual_roll.py  channel.py  characteristic_quality.py  equity_robustness.py  facade.py  fairness_robustness.py  historical_redistribution.py  model_challengers.py  q1_experiments.py  ratio_study.py  renovation_episodes.py  retail_market.py  review_queue.py  robustness.py  stability.py
src/philly_fair_measure/features/: __init__.py  assessment_features.py  characteristic_quality.py  condo_features.py  market_areas.py  price_index.py  property_state.py  proximity.py  renovation_episodes.py  sale_features.py  spatial.py  structure.py
src/philly_fair_measure/ingest/: derived.py  diff.py  manifests.py  snapshots.py
src/philly_fair_measure/models/: __init__.py  baseline.py  bayesian.py  comps.py  condo.py  conformal.py  cqr.py  ensemble.py  explain.py  metrics.py  renovation_state.py  risk.py  scoring.py
src/philly_fair_measure/sources/: carto.py  mapillary.py
src/philly_fair_measure/staging/: __init__.py  parcels.py  runner.py  tables.py  temporal.py
src/philly_fair_measure/validation/: __init__.py  opa.py  record_quality.py  sales.py  screen_audit.py
tests/: test_acs_sensitivity.py  test_aerial_change.py  test_annual_roll.py  test_api.py  test_arcgis.py  test_assessment_screen.py  test_baseline.py  test_bayesian.py  test_carto.py  test_catalog.py  test_channel.py  test_channel_value.py  test_characteristic_quality.py  test_comps.py  test_condo.py  test_conformal.py  test_cqr.py  test_distress_tenure.py  test_docs_sync.py  test_ensemble.py  test_equity_context.py  test_equity_robustness.py  test_explain.py  test_fairness_robustness.py  test_historical_redistribution.py  test_live_smoke.py  test_market_areas.py  test_market_areas_index.py  test_parcels.py  test_property_state.py  test_proximity.py  test_q1_experiments.py  test_renovation_episodes.py  test_repeat_sales_index.py  test_report.py  test_review_queue.py  test_risk.py  test_sale_features.py  test_sales_validation.py  test_snapshot_diff.py  (+6 more)
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/__tests__/: AddressSearch.spec.ts  IntervalStrip.spec.ts  annualReportNarrative.spec.ts  format.spec.ts  no-hardcoded-stats.spec.ts  verdict.spec.ts
web/src/api/: client.ts  types.ts
web/src/assets/: main.css  print.css
web/src/components/map/: PropertySheet.vue
web/src/components/search/: AddressSearch.vue
web/src/components/ui/: AppealSteps.vue  InfoTip.vue  SectionCard.vue  SkeletonBlock.vue  TaxYearBanner.vue
web/src/components/viz/: BoundaryTransect.vue  DriverBars.vue  HistorySpark.vue  IntervalExplainer.vue  IntervalStrip.vue  PeerHistogram.vue
web/src/composables/: useSearch.ts
web/src/config/: site.ts
web/src/data/: siteStats.json
web/src/lib/: analytics.ts
web/src/map/: fairMeasureMapStyle.ts
web/src/router/: index.ts
web/src/utils/: annualReportNarrative.ts  format.ts  verdict.ts
web/src/views/: AdminView.vue  AnnualReportView.vue  AppealView.vue  FindingsView.vue  HomeView.vue  MapView.vue  MethodologyView.vue  NotFoundView.vue  PropertyView.vue  TrustView.vue
